package com.example.dosennotif.model

data class User(
    val id: String = "",
    val name: String = "",
    val email: String = "",
    val nidn: String = "",
    val createdAt: Long = 0,
)